# ProtoBuf-Bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  addressbook.proto  list_addressbook.cpp  write_message.cpp
